Add google font and fixed validation errors

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ img {
 h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
+  font-family: "Patua One", sans-serif;
 }
 
 figcaption {
@@ -27,6 +28,7 @@ figcaption {
 nav {
   font-size: 1.125rem;
   font-weight: bold;
+  font-family: "Patua One", sans-serif;
 }
 
 nav ol {
@@ -41,4 +43,8 @@ nav a {
 nav a:hover {
   color: #b42885;
   text-decoration: underline;
+}
+
+.intro {
+  font-size: 1rem;
 }
